--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>OONI VOLT 12 vs OONI VOLT 2 - Electric Pizza Oven Comparison</h3>
                         <div class="channel">Tom Voyage</div>
-                        <div class="date">19 minutes ago</div>
+                        <div class="date">36 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>POV: Making Neapolitan Pizza While Answering Your Questions</h3>
                         <div class="channel">Julian Sisofo</div>
-                        <div class="date">4 hours ago</div>
+                        <div class="date">5 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>After 10 Years in Trading I Finally Succeeded</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">4 hours ago</div>
+                        <div class="date">5 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Arjuna, Karna, Bhishma or Krishna – Who Was the Greatest of Mahabharat’s Warriors? | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">6 hours ago</div>
+                        <div class="date">7 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Mean Reversion Strategy That Works (Backed By Data)</h3>
                         <div class="channel">Rayner Teo</div>
-                        <div class="date">9 hours ago</div>
+                        <div class="date">10 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Why aren't more traders profitable?</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">11 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>Trendline analysis of the US Dollar...</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">11 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Exploring True Compassion</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">11 hours ago</div>
+                        <div class="date">12 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -244,7 +244,7 @@
                     <div class="video-info">
                         <h3>How to Always Keep Your Room Clean & Organized (Simple & Easy)</h3>
                         <div class="channel">Samurai Matcha</div>
-                        <div class="date">17 hours ago</div>
+                        <div class="date">18 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -255,7 +255,7 @@
                     <div class="video-info">
                         <h3>I Waited 2-Hours to try Japan's Fluffiest Egg Sandwich</h3>
                         <div class="channel">Paolo fromTOKYO</div>
-                        <div class="date">18 hours ago</div>
+                        <div class="date">19 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -398,7 +398,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN REMATCH BUT THEY'RE ACTUALLY GOOD?</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1920,7 +1920,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN BEST FRIEND TEST</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">2 weeks ago</div>
+                        <div class="date">3 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -2239,7 +2239,7 @@
                     <div class="video-info">
                         <h3>PIZZA STRETCHING, SCOOPING, AND RESCUE  PIZZA, TIPS & TRICKS</h3>
                         <div class="channel">Massimo Nocerino Pizza Massimo</div>
-                        <div class="date">3 weeks ago</div>
+                        <div class="date">4 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5083,7 +5083,7 @@
                         <div class="video-info">
                             <h3>After 10 Years in Trading I Finally Succeeded</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">4 hours ago</div>
+                            <div class="date">5 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5094,7 +5094,7 @@
                         <div class="video-info">
                             <h3>Mean Reversion Strategy That Works (Backed By Data)</h3>
                             <div class="channel">Rayner Teo</div>
-                            <div class="date">9 hours ago</div>
+                            <div class="date">10 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5105,7 +5105,7 @@
                         <div class="video-info">
                             <h3>Why aren't more traders profitable?</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">11 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5116,7 +5116,7 @@
                         <div class="video-info">
                             <h3>Trendline analysis of the US Dollar...</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">11 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7260,7 +7260,7 @@
                         <div class="video-info">
                             <h3>Arjuna, Karna, Bhishma or Krishna – Who Was the Greatest of Mahabharat’s Warriors? | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">6 hours ago</div>
+                            <div class="date">7 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7271,7 +7271,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Exploring True Compassion</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">11 hours ago</div>
+                            <div class="date">12 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8234,7 +8234,7 @@
                         <div class="video-info">
                             <h3>How to Always Keep Your Room Clean & Organized (Simple & Easy)</h3>
                             <div class="channel">Samurai Matcha</div>
-                            <div class="date">17 hours ago</div>
+                            <div class="date">18 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8735,7 +8735,7 @@
                         <div class="video-info">
                             <h3>OONI VOLT 12 vs OONI VOLT 2 - Electric Pizza Oven Comparison</h3>
                             <div class="channel">Tom Voyage</div>
-                            <div class="date">19 minutes ago</div>
+                            <div class="date">36 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -8746,7 +8746,7 @@
                         <div class="video-info">
                             <h3>POV: Making Neapolitan Pizza While Answering Your Questions</h3>
                             <div class="channel">Julian Sisofo</div>
-                            <div class="date">4 hours ago</div>
+                            <div class="date">5 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8977,7 +8977,7 @@
                         <div class="video-info">
                             <h3>PIZZA STRETCHING, SCOOPING, AND RESCUE  PIZZA, TIPS & TRICKS</h3>
                             <div class="channel">Massimo Nocerino Pizza Massimo</div>
-                            <div class="date">3 weeks ago</div>
+                            <div class="date">4 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -9572,7 +9572,7 @@
                         <div class="video-info">
                             <h3>I Waited 2-Hours to try Japan's Fluffiest Egg Sandwich</h3>
                             <div class="channel">Paolo fromTOKYO</div>
-                            <div class="date">18 hours ago</div>
+                            <div class="date">19 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9594,7 +9594,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN REMATCH BUT THEY'RE ACTUALLY GOOD?</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -9715,7 +9715,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN BEST FRIEND TEST</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">2 weeks ago</div>
+                            <div class="date">3 weeks ago</div>
                         </div>
                     </a>
                 </div>
