--- a/index.html
+++ b/index.html
@@ -306,9 +306,9 @@
         
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=NheeZ94_Ajk" target="_blank">
-                    <img src="https://i.ytimg.com/vi/NheeZ94_Ajk/mqdefault.jpg" alt="Mean Reversion Strategy That Works (Backed By Data)">
+                    <img src="https://i.ytimg.com/vi/NheeZ94_Ajk/mqdefault.jpg" alt="Mean Reversion System That Works (Backed By Data)">
                     <div class="video-info">
-                        <h3>Mean Reversion Strategy That Works (Backed By Data)</h3>
+                        <h3>Mean Reversion System That Works (Backed By Data)</h3>
                         <div class="channel">Rayner Teo</div>
                         <div class="date">Yesterday</div>
                     </div>
@@ -5145,9 +5145,9 @@
             
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=NheeZ94_Ajk" target="_blank">
-                        <img src="https://i.ytimg.com/vi/NheeZ94_Ajk/mqdefault.jpg" alt="Mean Reversion Strategy That Works (Backed By Data)">
+                        <img src="https://i.ytimg.com/vi/NheeZ94_Ajk/mqdefault.jpg" alt="Mean Reversion System That Works (Backed By Data)">
                         <div class="video-info">
-                            <h3>Mean Reversion Strategy That Works (Backed By Data)</h3>
+                            <h3>Mean Reversion System That Works (Backed By Data)</h3>
                             <div class="channel">Rayner Teo</div>
                             <div class="date">Yesterday</div>
                         </div>
