--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Ever Smoked Weed? Logan Paul Asks Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">59 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -7238,7 +7238,7 @@
                         <div class="video-info">
                             <h3>Ever Smoked Weed? Logan Paul Asks Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">59 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
