--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Algorithmic Trading: Disadvantages EXPOSED! Know BEFORE! #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>The Truth About Day Trading</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">4 hours ago</div>
+                        <div class="date">5 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>This Was my  Grandma favorite pizza To make</h3>
                         <div class="channel">Vito Iacopelli</div>
-                        <div class="date">16 hours ago</div>
+                        <div class="date">17 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -229,9 +229,9 @@
         
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=lgzn2AsFULE" target="_blank">
-                    <img src="https://i.ytimg.com/vi/lgzn2AsFULE/mqdefault.jpg" alt="Are Labour unlucky (or are they just rubbish)?">
+                    <img src="https://i.ytimg.com/vi/lgzn2AsFULE/mqdefault.jpg" alt="Are Labour Unlucky (or are they just rubbish)?">
                     <div class="video-info">
-                        <h3>Are Labour unlucky (or are they just rubbish)?</h3>
+                        <h3>Are Labour Unlucky (or are they just rubbish)?</h3>
                         <div class="channel">Garys Economics</div>
                         <div class="date">Yesterday</div>
                     </div>
@@ -5083,7 +5083,7 @@
                         <div class="video-info">
                             <h3>Algorithmic Trading: Disadvantages EXPOSED! Know BEFORE! #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5094,7 +5094,7 @@
                         <div class="video-info">
                             <h3>The Truth About Day Trading</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">4 hours ago</div>
+                            <div class="date">5 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5134,9 +5134,9 @@
             
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=lgzn2AsFULE" target="_blank">
-                        <img src="https://i.ytimg.com/vi/lgzn2AsFULE/mqdefault.jpg" alt="Are Labour unlucky (or are they just rubbish)?">
+                        <img src="https://i.ytimg.com/vi/lgzn2AsFULE/mqdefault.jpg" alt="Are Labour Unlucky (or are they just rubbish)?">
                         <div class="video-info">
-                            <h3>Are Labour unlucky (or are they just rubbish)?</h3>
+                            <h3>Are Labour Unlucky (or are they just rubbish)?</h3>
                             <div class="channel">Garys Economics</div>
                             <div class="date">Yesterday</div>
                         </div>
@@ -8735,7 +8735,7 @@
                         <div class="video-info">
                             <h3>This Was my  Grandma favorite pizza To make</h3>
                             <div class="channel">Vito Iacopelli</div>
-                            <div class="date">16 hours ago</div>
+                            <div class="date">17 hours ago</div>
                         </div>
                     </a>
                 </div>
