--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>The Truth About Day Trading</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">11 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>This Was my  Grandma favorite pizza To make</h3>
                         <div class="channel">Vito Iacopelli</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -515,9 +515,9 @@
         
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=gk013YY1mx0" target="_blank">
-                    <img src="https://i.ytimg.com/vi/gk013YY1mx0/mqdefault.jpg" alt="Mindfulness on the Go | Eckhart Tolle on The Path To Enlightenment (Part 2)">
+                    <img src="https://i.ytimg.com/vi/gk013YY1mx0/mqdefault.jpg" alt="Mindfulness Anytime, Anywhere | Eckhart Tolle on The Path To Enlightenment (Part 2)">
                     <div class="video-info">
-                        <h3>Mindfulness on the Go | Eckhart Tolle on The Path To Enlightenment (Part 2)</h3>
+                        <h3>Mindfulness Anytime, Anywhere | Eckhart Tolle on The Path To Enlightenment (Part 2)</h3>
                         <div class="channel">Eckhart Tolle</div>
                         <div class="date">3 days ago</div>
                     </div>
@@ -5105,7 +5105,7 @@
                         <div class="video-info">
                             <h3>The Truth About Day Trading</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">11 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7388,9 +7388,9 @@
             
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=gk013YY1mx0" target="_blank">
-                        <img src="https://i.ytimg.com/vi/gk013YY1mx0/mqdefault.jpg" alt="Mindfulness on the Go | Eckhart Tolle on The Path To Enlightenment (Part 2)">
+                        <img src="https://i.ytimg.com/vi/gk013YY1mx0/mqdefault.jpg" alt="Mindfulness Anytime, Anywhere | Eckhart Tolle on The Path To Enlightenment (Part 2)">
                         <div class="video-info">
-                            <h3>Mindfulness on the Go | Eckhart Tolle on The Path To Enlightenment (Part 2)</h3>
+                            <h3>Mindfulness Anytime, Anywhere | Eckhart Tolle on The Path To Enlightenment (Part 2)</h3>
                             <div class="channel">Eckhart Tolle</div>
                             <div class="date">3 days ago</div>
                         </div>
@@ -8746,7 +8746,7 @@
                         <div class="video-info">
                             <h3>This Was my  Grandma favorite pizza To make</h3>
                             <div class="channel">Vito Iacopelli</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
